test_suite/tests/errors/conditionless_rule_with_fallback.stderr
error: Conditionless rule `step` cannot have an `!?` branch without a condition
 --> tests/errors/conditionless_rule_with_fallback.rs:6:13
  |
6 |             step? { return; } !? { return; }
  |             ^^^^
